Arreglos necesarios en la implementacion de servicios